Fix menu items height and alignment

--- a/engine-wizard/scss/_layout.scss
+++ b/engine-wizard/scss/_layout.scss
@@ -102,6 +102,7 @@ body {
         li {
             padding: 0;
             list-style: none;
+            line-height: 1.3;
             margin-bottom: 1px;
             @include border-radius($border-radius);
 
@@ -417,7 +418,7 @@ body {
         .profile-info {
             margin: 5px;
             padding: 5px;
-            text-align: center;
+            justify-content: center;
 
             .profile-image {
                 width: 28px;
